# pure-zlib

./: .gitattributes  .gitignore  .travis.yml  Benchmark.hs  Deflate.hs  README.md  pure-zlib.cabal
.github/workflows/: fourmolu.yml  haskell-ci.yml
src/Codec/Compression/: Zlib.hs
src/Codec/Compression/Zlib/: Adler32.hs  Deflate.hs  FingerTree.hs  HuffmanTree.hs  Monad.hs  OutputWindow.hs
test/: Test.hs
